--- a/git_test.html
+++ b/git_test.html
@@ -7,5 +7,6 @@
         <h1>My first git upload file</h1>
         <p>Hello World!</p>
         <h2>life is too short</h2>
+        <h3>add h3</h3>
     </body>
 </html>
